Started refactoring code